--- a/Keras01_ForBegginer.ipynb
+++ b/Keras01_ForBegginer.ipynb
@@ -33,7 +33,7 @@
         "colab_type": "text"
       },
       "source": [
-        "[「【入門者向け解説】Kerasで単純なディープラーニングモデル定義」](https://qiita.com/FukuharaYohei/items/579cc0184885b4ba75df)で解説しています。\n",
+        "[「【Keras入門(1)】単純なディープラーニングモデル定義」](https://qiita.com/FukuharaYohei/items/579cc0184885b4ba75df)で解説しています。\n",
         "\n",
         "ブログ記事[「無から始めるKeras」](https://qiita.com/Ishotihadus/items/c2f864c0cde3d17b7efb)のシリーズおよび[Kerasによる、ものすごくシンプルな深層学習の例](https://qiita.com/hiroeorz@github/items/33b85529be0829f34973)を参考にしました。\n"
       ]
@@ -149,7 +149,7 @@
         "\n",
         "model.summary()"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -197,7 +197,7 @@
       "source": [
         "model.fit(data, labels, nb_epoch=300, validation_split=0.2)"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -866,7 +866,7 @@
         "print(test_labels)\n",
         "print(\"Accuracy:\",sum(predict == test_labels) / NUM_TEST)"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -896,7 +896,7 @@
         "# ライブラリバージョン確認\n",
         "!pip freeze"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
