--- a/Keras02_SaveModel.ipynb
+++ b/Keras02_SaveModel.ipynb
@@ -33,9 +33,10 @@
         "colab_type": "text"
       },
       "source": [
-        "[「【入門者向け解説】Kerasで単純なディープラーニングモデル定義」](https://qiita.com/FukuharaYohei/items/579cc0184885b4ba75df)で解説しています。\n",
+        "[「【Keras入門(2)】訓練モデル保存(KerasモデルとSavedModel)」](https://qiita.com/FukuharaYohei/items/ac6333391b8abda94bdc)で解説しています。\n",
         "\n",
-        "ブログ記事[「無から始めるKeras」](https://qiita.com/Ishotihadus/items/c2f864c0cde3d17b7efb)のシリーズおよび[Kerasによる、ものすごくシンプルな深層学習の例](https://qiita.com/hiroeorz@github/items/33b85529be0829f34973)を参考にしました。\n"
+        "[公式チュートリアル](https://www.tensorflow.org/tutorials/keras/save_and_restore_models)を参考にしました。\n",
+        "\n"
       ]
     },
     {
@@ -154,7 +155,7 @@
         "\n",
         "model.summary()"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -217,7 +218,7 @@
       "source": [
         "model.fit(data, labels, nb_epoch=300, validation_split=0.2, callbacks=li_cb)"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -849,11 +850,11 @@
       "metadata": {
         "id": "Pg_u72Bud5AM",
         "colab_type": "code",
+        "outputId": "b7f5f242-56ed-49f6-be96-593ed02180d3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 488
-        },
-        "outputId": "b7f5f242-56ed-49f6-be96-593ed02180d3"
+        }
       },
       "source": [
         "# SavedModelフォーマットで保存(TensorFlow2.0ではexport_saved_modelを使う\n",
@@ -863,7 +864,7 @@
         "# Eager Executionでないとserving_only=Trueは失敗\n",
         "#tf.contrib.saved_model.save_keras_model(model, './models/keras_export', serving_only=True)"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -952,7 +953,7 @@
         "print(test_labels)\n",
         "print(\"Accuracy:\",sum(predict == test_labels) / NUM_TEST)"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -997,11 +998,11 @@
       "metadata": {
         "id": "dLkCyjTGqwam",
         "colab_type": "code",
+        "outputId": "d6ed070b-261d-4207-b0bd-4ce4de85fa67",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 280
-        },
-        "outputId": "d6ed070b-261d-4207-b0bd-4ce4de85fa67"
+        }
       },
       "source": [
         "tf.contrib.saved_model.save_keras_model(model, './models/keras_export')\n",
@@ -1009,7 +1010,7 @@
         "# Eager Executionでないとserving_only=Trueは失敗\n",
         "#tf.contrib.saved_model.save_keras_model(model, './models/keras_export', serving_only=True)"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1049,17 +1050,17 @@
       "metadata": {
         "id": "z8FXwRbvrS-v",
         "colab_type": "code",
+        "outputId": "e33ae14a-0a3a-403b-abac-a971603c0530",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 6240
-        },
-        "outputId": "e33ae14a-0a3a-403b-abac-a971603c0530"
+        }
       },
       "source": [
         "# ライブラリバージョン確認\n",
         "!pip freeze"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
