--- a/Keras04_Serving_clinet.ipynb
+++ b/Keras04_Serving_clinet.ipynb
@@ -91,10 +91,10 @@
       },
       "source": [
         "request = predict_pb2.PredictRequest()\n",
-        "request.model_spec.name = 'test'\n",
-        "request.model_spec.signature_name = 'serving_default'\n",
+        "request.model_spec.name = 'test'  #モデル名\n",
+        "request.model_spec.signature_name = 'serving_default'  #signature\n",
         "request.inputs['dense_input'].CopyFrom(\n",
-        "    tf.make_tensor_proto(data, shape=[1,2]))"
+        "    tf.make_tensor_proto(data, shape=[1,2]))   #inputs"
       ],
       "execution_count": 0,
       "outputs": []
@@ -147,7 +147,7 @@
       },
       "source": [
         "%%time\n",
-        "print(stub.Predict(request, 3000))"
+        "print(stub.Predict(request, 10))  #10秒のtimeout"
       ],
       "execution_count": 0,
       "outputs": []
