Colaboratory を使用して作成しました

--- a/Keras04_Serving_clinet.ipynb
+++ b/Keras04_Serving_clinet.ipynb
@@ -33,7 +33,7 @@
         "colab_type": "text"
       },
       "source": [
-        "[「TensorFlow ServingをUbuntuにインストールして推論(Python)」]()で解説しています。\n",
+        "[「TensorFlow ServingをUbuntuにインストールして推論(Python)」](https://qiita.com/FukuharaYohei/items/13ea650c6f370111b0ba)で解説しています。\n",
         "\n",
         "[mnist_client.py](https://github.com/tensorflow/serving/blob/master/tensorflow_serving/example/mnist_client.py)を参考にしました。\n",
         "\n"
