--- a/Keras07_hyperas.ipynb
+++ b/Keras07_hyperas.ipynb
@@ -41,6 +41,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "J9s20jFLz4nK",
+        "colab_type": "text"
+      },
+      "source": [
+        "ブログ記事[「Hyperasを使ったKerasハイパーパラメータチューニング」](https://qiita.com/FukuharaYohei/items/c8cc9d80452350b449eb)にて解説。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "pU_tXxmFvZND",
         "colab_type": "text"
       },
