--- a/Keras09_merge.ipynb
+++ b/Keras09_merge.ipynb
@@ -32,7 +32,10 @@
         "colab_type": "text"
       },
       "source": [
-        "[Kerasで複数の入力を統合/マージする方法](https://urusulambda.wordpress.com/2018/03/04/keras%E3%81%A7%E8%A4%87%E6%95%B0%E3%81%AE%E5%85%A5%E5%8A%9B%E3%82%92%E7%B5%B1%E5%90%88-%E3%83%9E%E3%83%BC%E3%82%B8%E3%81%99%E3%82%8B%E6%96%B9%E6%B3%95/)"
+        "以下の記事参照\n",
+        "- [超簡単 Kerasで複数Input統合モデル\n",
+        "](https://qiita.com/FukuharaYohei/items/58cfbce0ed81833a2da1)\n",
+        "- [Kerasで複数の入力を統合/マージする方法](https://urusulambda.wordpress.com/2018/03/04/keras%E3%81%A7%E8%A4%87%E6%95%B0%E3%81%AE%E5%85%A5%E5%8A%9B%E3%82%92%E7%B5%B1%E5%90%88-%E3%83%9E%E3%83%BC%E3%82%B8%E3%81%99%E3%82%8B%E6%96%B9%E6%B3%95/)"
       ]
     },
     {
